Bug 337743 - Setting height, hiding and locked from layout.js doesn't have any effect
Summary: Setting height, hiding and locked from layout.js doesn't have any effect
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-23 21:37 UTC by Pier Luigi Fiorini
Modified: 2014-10-10 12:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pier Luigi Fiorini 2014-07-23 21:37:00 UTC
Panel javascript interface lets you change hiding and containment locked flag but it has no effect.

Code from my layout.js follows:

// Create top panel with the clock for the primary screen
var topPanel = new Panel;
topPanel.screen = 0;
topPanel.location = "top";
topPanel.hiding = "windowscover";
topPanel.height = 48; // units.iconSizes.medium
topPanel.locked = true;
Comment 1 Marco Martin 2014-10-10 12:54:03 UTC
Git commit ee05d5aec817c31689d0d3b7defbcb547122c865 by Marco Martin.
Committed on 10/10/2014 at 12:48.
Pushed by mart into branch 'Plasma/5.1'.

redeclare missing properties from Containment

Unlike QML, in QtScript you have to redeclare all the Q_PROPERTIES
of the superclass in all subclasses

M  +4    -0    shell/scripting/panel.h

http://commits.kde.org/plasma-workspace/ee05d5aec817c31689d0d3b7defbcb547122c865