 redeclare missing properties from Containment

Unlike QML, in QtScript you have to redeclare all the Q_PROPERTIES
of the superclass in all subclasses

BUG:337743